# Semantic-Book-Recommender

./: .gitignore  main.py  pyproject.toml
src/: data-exploration.ipynb  gradio-dashboard.py  sentiment-analysis.ipynb  text-classification.ipynb  vector-search.ipynb
