[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.38.0",
    "ipywidgets>=8.1.7",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "transformers>=4.53.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
